Change tests and upgrade libraries to make it run on Java 11